RESOLVED FIXED223410
modern-media-controls css should not allocate heap memory
https://bugs.webkit.org/show_bug.cgi?id=223410
Summary modern-media-controls css should not allocate heap memory
Yusuke Suzuki
Reported 2021-03-17 19:32:15 PDT
modern-media-controls css should not allocate heap memory
Attachments
Patch (13.02 KB, patch)
2021-03-17 19:35 PDT, Yusuke Suzuki
hi: review+
Patch (13.71 KB, patch)
2021-03-17 20:20 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-03-17 19:35:59 PDT
Devin Rousso
Comment 2 2021-03-17 19:38:21 PDT
Comment on attachment 423549 [details] Patch r=me once EWS is happy :)
Yusuke Suzuki
Comment 3 2021-03-17 20:20:23 PDT
Yusuke Suzuki
Comment 4 2021-03-17 21:38:48 PDT
Radar WebKit Bug Importer
Comment 5 2021-03-17 21:39:14 PDT
Note You need to log in before you can comment on or make changes to this bug.