modern-media-controls css should not allocate heap memory https://bugs.webkit.org/show_bug.cgi?id=223410

Reviewed by Devin Rousso.

This is CSS version of <https://commits.webkit.org/235444@main>. We should not allocate heap memory for
modern-media-controls.css. This patch leverages UserAgentStyleSheets mechanism to include this style
sheet in constant __DATA.

* DerivedSources-input.xcfilelist:
* DerivedSources-output.xcfilelist:
* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:
* css/make-css-file-arrays.pl:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::modernMediaControlsStyleSheet):
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::modernMediaControlsStyleSheet):

Canonical link: https://commits.webkit.org/235450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274613 268f45cc-cd09-0410-ab3c-d52691b4dbfc