Source/WebCore/css/make-css-file-arrays.pl
@@ -78,8 +78,10 @@ for my $in (@ARGV) {
         print OUT "    ";
         my $j = 0;
         while ($j < 16 && $i < $length) {
+            my $character = ord substr $text, $i, 1;
+            die if $character >= 128;
             print OUT ", " unless $j == 0;
-            print OUT ord substr $text, $i, 1;
+            print OUT $character;
             ++$i;
             ++$j;
         }
